...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_form"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed">
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_confirm_button"
        app:layout_constraintVertical_chainStyle="spread">
        <LinearLayout
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_amount_row"
            android:gravity="center_vertical">
            <TextView
...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_an_ingredient_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_unit_row"
            android:gravity="center">
            <TextView
...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_an_ingredient_amount_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                android:id="@+id/add_an_ingredient_increase_amount_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_an_ingredient_amount_row"
            app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_category_row">

            <TextView
...

            <ImageButton
                android:id="@+id/add_an_ingredient_pick_unit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_location_row"
            android:gravity="center_vertical">
            <TextView
...

            <ImageButton
                android:id="@+id/add_an_ingredient_pick_category_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_bbf_row"
            android:gravity="center_vertical">
            <TextView
...

            <ImageButton
                android:id="@+id/add_an_ingredient_pick_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                android:id="@+id/add_an_ingredient_calendar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
